dark mode + fix

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body {
   padding: 0;
   display: flex;
   justify-content: center;
+  transition: background 0.2s linear;
 }
 
 .instagram-wrapper {
@@ -120,11 +121,72 @@ body {
 }
 
 .app-download:nth-child(1) {
-  background-image: url('./img/apple-button.png');
+  background-image: url('../img/apple-button.png');
 }
 
 .app-download:nth-child(2) {
-  background-image: url('./img/googleplay-button.png');
+  background-image: url('../img/googleplay-button.png');
+}
+
+/* Dark Mode Feature */ 
+
+.instagram-dark-checkbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+	height: 20vh;
+}
+
+.checkbox {
+  position: absolute;
+	opacity: 0;
+}
+
+.label {
+	background-color: #111;
+	border-radius: 50px;
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 5px;
+	position: relative;
+	height: 26px;
+	width: 50px;
+	transform: scale(1.5);
+}
+
+.label .ball {
+	background-color: #fff;
+	border-radius: 50%;
+	position: absolute;
+	top: 2px;
+	left: 2px;
+	height: 22px;
+	width: 22px;
+	transform: translateX(0px);
+	transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .label .ball {
+	transform: translateX(24px);
+}
+
+.fa-moon {
+	color: #0095f6;
+}
+
+.fa-sun {
+	color: #f39c12;
+}
+
+body.dark {
+	background: #6e6e70;
+}
+
+.get-the-app.dark {
+	background: #292C35;
 }
 
 @media (max-width: 1024px) {
